# nocmd

./: .gitignore  .mmcp.toml  Cargo.toml  launch.mjs  package.json
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  detect.rs  engine.rs  lib.rs  parse.rs  redirect.rs
crates/core/src/config/: mod.rs
crates/core/src/config/groups/: git_mcp.rs  node_bun.rs  read.rs  text.rs
crates/core/src/detect/: mod.rs
crates/core/src/groups/: cargo_mcp.rs  edit.rs  git_mcp.rs  glob.rs  grep.rs  mod.rs  node_bun.rs  python_uv.rs  read.rs  text.rs
crates/core/src/parse/: mod.rs
crates/core/src/redirect/: mod.rs
hooks/: hooks.json
tools/npmgen/: Cargo.toml
tools/npmgen/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
