[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nocmd contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
nocmd-core = { path = "crates/core" }

# A hook binary is tiny and runs on every Bash call: optimize the release
# build for size and fast startup over raw throughput.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
