[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "tools/npmgen"]
default-members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gabriel GRONDIN <gglinnk@protonmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nocmd-core = { path = "crates/core" }

# A hook binary is tiny and runs on every Bash call: optimize the release
# build for size and fast startup over raw throughput.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
